feat: redesign model detail page with BMW iX-inspired editorial layout
- Hero: dark cinematic style with "THE NEW" label, large model name, dual CTAs
- Key Stats: 3 big numbers bar with "Technical Data" anchor link
- Intro Story: centered editorial heading + model description
- Color Picker: prominent large car view with swatches (moved up)
- Key Features: 3 cards with image placeholders + "Find out more" links
- Design Stories: alternating image/text blocks for exterior + interior
- Specs Table: cleaner tabbed layout with anchor ID
- FAQ: collapsible accordion with 3 questions per model
- CTA: refined font styling
- Data: added keyStats, description, designStories, FAQ to all 9 models
- i18n: added new dictionary keys for all new sections

--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -62,7 +62,15 @@
     "seatingCapacity": "Seating Capacity",
     "airbags": "Airbags",
     "interested": "Interested in this model?",
-    "interestedSubtitle": "Take the next step towards owning your dream Honda"
+    "interestedSubtitle": "Take the next step towards owning your dream Honda",
+    "theNew": "THE NEW",
+    "requestOffer": "Request an Offer",
+    "downloadSpec": "Download Spec Card",
+    "technicalData": "Technical Data",
+    "designTitle": "Distinctive design that displays character.",
+    "designSubtitle": "Thoughtfully crafted details that make every angle memorable",
+    "faqTitle": "Frequently asked questions",
+    "findOutMore": "Find out more"
   },
   "footer": {
     "quickLinks": "Quick Links",
